# plonky2-crypto

./: Cargo.toml
src/nonnative/gadgets/: biguint.rs
src/u32/: mod.rs
src/u32/gadgets/: arithmetic_u32.rs  interleaved_u32.rs  multiple_comparison.rs
src/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  interleave_u32.rs  range_check_u32.rs  subtraction_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
