[package]
name = "plonky2_crypto"
description = "Crypto gadgets for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
plonky2 = {git = "https://github.com/Electron-Labs/plonky2",  branch = "derive_bn254_from_ff"}
plonky2_maybe_rayon = { version = "0.1" }
itertools = { version = "0.11.0", default-features = false }
num = { version = "0.4", default-features = false, features = ["rand"] }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_with = { version = "2.2.0", features = ["hex"] }
rayon = { version = "1.5.3" }
hex = { version = "0.4.3" }
rand = { version = "0.8.4", default-features = false }

[dev-dependencies]
debug_print = { version = "1.0.0" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"
criterion = "0.3"
